# estimador-cag

./: .env.example  .gitignore  CLAUDE.md  README.md  api_client.py  pyproject.toml  streamlit_app.py
app/: config.py  logging_config.py  main.py  middleware.py  schemas.py
app/context/: examples.py
app/prompts/: loader.py
app/prompts/estimation/v1/: examples.j2  system.j2  user.j2
app/prompts/estimation/v2/: examples.j2  system.j2  user.j2
app/prompts/session/v1/: system.j2
app/routers/: estimations.py
app/schemas/: estimation.py
app/services/: cache.py  documents.py  llm_service.py  sessions.py
tests/: test_api_client.py  test_documents.py  test_integration_sessions.py  test_metadata_extraction.py  test_session_estimate_endpoint.py  test_session_prompt.py  test_sessions.py  test_sessions_endpoint.py  test_streamlit_ui.py
tests/prompts/: test_estimation_v1.py  test_estimation_v2.py  test_loader.py  test_reference_projects.py
