[project]
name = "estimador-cag"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "anthropic>=0.105.2",
    "fastapi>=0.136.3",
    "httpx>=0.28.1",
    "jinja2>=3.1.6",
    "litellm>=1.88.1",
    "openai>=2.38.0",
    "pydantic-settings>=2.14.1",
    "pypdf>=5.1.0",
    "python-docx>=1.1.2",
    "python-dotenv>=1.2.2",
    "python-multipart>=0.0.9",
    "redis>=8.0.0",
    "streamlit>=1.58.0",
    "structlog>=26.1.0",
    "uvicorn[standard]>=0.48.0",
]

[dependency-groups]
dev = [
    "pytest>=9.1.0",
    "pytest-asyncio>=0.24.0",
]

[tool.pytest.ini_options]
# Pone la raíz del repo en sys.path para que `from app...` resuelva en los tests.
pythonpath = ["."]
testpaths = ["tests"]
# Las funciones `async def test_*` se ejecutan como tests asyncio sin marca explícita
# (los tests de integración usan httpx.AsyncClient).
asyncio_mode = "auto"
